--- a/index.html
+++ b/index.html
@@ -1,167 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<head>
+  <title>Title</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Google Fonts -->
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <!-- About -->
-    <section class="project py-5" id="about">
-      <div class="about__title container py-md-5 py-3 text-center">
-        <h6>ABOUT US</h6>
-        <h3>
-          We Love Your Pets Like They Are Our <br />
-          Own
-        </h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          hic odio <br />
-          voluptatem tenetur consequatur. Vestibulum ante ipsum primis in
-          faucibus orci luctus <br />
-          et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut
-          rhoncus turpis <br />
-          sodales quis.
-        </p>
-        <a href="#" class="read">Read More</a>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="./css/style-liberty.css">
+
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+  <header class="fixed-top">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Pooch Care
+        </a>
+
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Gallery
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Blog <span class="fa fa-angle-down"></span></a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                <a class="dropdown-item" href="blog.html">Blog Posts</a>
+                <a class="dropdown-item" href="blog-single.html">Blog single</a>
+                <a class="dropdown-item" href="landing-single.html">Landing Page</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                Contact</a>
+            </li>
+          </ul>
+        </div>
+        <i class="gg-sun"></i>
+      </nav>
+    </div>
+  </header>
+  <!-- main-slider -->
+  <section class="w3l-main-slider" id="home">
+    <div class="companies20-content">
+      <div class="owl-one owl-carousel owl-theme">
+        <div class="item">
+          <li>
+            <div class="slider-info banner-view bg bg2">
+              <div class="banner-info">
+                <div class="container">
+                  <div class="banner-info-bg text-left">
+                    <h5>Quality Things for Loving Pets</h5>
+                    <p>Keeps your Pet Smiling</p>
+                    <a class="btn btn-style btn-white mt-sm-5 mt-4 mr-2" href="about.html"> Read More</a>
+                    <a class="btn btn-style border-btn mt-sm-5 mt-4" href="contact.html"> Contact Us</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </div>
+        <div class="item">
+          <li>
+            <div class="slider-info  banner-view banner-top1 bg bg2">
+              <div class="banner-info">
+                <div class="container">
+                  <div class="banner-info-bg ml-lg-auto">
+                    <h5>Delivering happiness for Pets</h5>
+                    <p>For the love of pets </p>
+                    <a class="btn btn-style btn-white mt-sm-5 mt-4 mr-2" href="about.html"> Read More</a>
+                    <a class="btn btn-style border-btn mt-sm-5 mt-4" href="contact.html"> Contact Us</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </div>
+        <div class="item">
+          <li>
+            <div class="slider-info banner-view banner-top2 bg bg2">
+              <div class="banner-info">
+                <div class="container">
+                  <div class="banner-info-bg text-left">
+
+                    <h5>Quality Things for Loving Pets</h5>
+                    <p>Keeps your Pet Smiling</p>
+                    <a class="btn btn-style btn-white mt-sm-5 mt-4 mr-2" href="about.html"> Read More</a>
+                    <a class="btn btn-style border-btn mt-sm-5 mt-4" href="contact.html"> Contact Us</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </div>
+        <div class="item">
+          <li>
+            <div class="slider-info banner-view banner-top3 bg bg2">
+              <div class="banner-info">
+                <div class="container">
+                  <div class="banner-info-bg ml-lg-auto">
+                    <h5>Delivering happiness for Pets</h5>
+                    <p>We help your Projects</p>
+                    <a class="btn btn-style btn-white mt-sm-5 mt-4 mr-2" href="about.html">Read More</a>
+                    <a class="btn btn-style border-btn mt-sm-5 mt-4" href="contact.html"> Contact Us</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </div>
       </div>
-    </section>
-    <!-- End About -->
+    </div>
+  </section>
+  </section>
+  <!-- About -->
+  <section class="project py-5" id="about">
+    <div class="about__title container py-md-5 py-3 text-center">
+      <h6>ABOUT US</h6>
+      <h3>
+        We Love Your Pets Like They Are Our <br />
+        Own
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+        hic odio <br />
+        voluptatem tenetur consequatur. Vestibulum ante ipsum primis in
+        faucibus orci luctus <br />
+        et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut
+        rhoncus turpis <br />
+        sodales quis.
+      </p>
+      <a href="#" class="read">Read More</a>
+    </div>
+  </section>
+  <!-- End About -->
 
-    <!-- Features -->
-    <section class="py-5" id="features">
-      <div class="container py-lg-5 py-md-4">
-        <div class="features__content">
-          <div class="row">
-            <div class="col-12 col-sm-6 col-lg-4 my-3">
-              <div class="features__item">
-                <i class="fa-solid fa-snowflake"></i>
-                <h4><a href="#feature" class="title-head">Dog Walking</a></h4>
-                <p>
-                  Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
-                  doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
-                  leo.
-                </p>
-                <a href="#" class="read">Read More</a>
-              </div>
+  <!-- Features -->
+  <section class="py-5" id="features">
+    <div class="container py-lg-5 py-md-4">
+      <div class="features__content">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-4 my-3">
+            <div class="features__item">
+              <i class="fa-solid fa-snowflake"></i>
+              <h4><a href="#feature" class="title-head">Dog Walking</a></h4>
+              <p>
+                Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
+                doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
+                leo.
+              </p>
+              <a href="#" class="read">Read More</a>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 my-3">
-              <div class="features__item">
-                <i class="fa-solid fa-utensils"></i>
-                <h4>
-                  <a href="#feature" class="title-head">Healthy Meals</a>
-                </h4>
-                <p>
-                  Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
-                  doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
-                  leo.
-                </p>
-                <a href="#" class="read">Read More</a>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 my-3">
+            <div class="features__item">
+              <i class="fa-solid fa-utensils"></i>
+              <h4>
+                <a href="#feature" class="title-head">Healthy Meals</a>
+              </h4>
+              <p>
+                Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
+                doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
+                leo.
+              </p>
+              <a href="#" class="read">Read More</a>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 my-3">
-              <div class="features__item">
-                <i class="fa-solid fa-hands"></i>
-                <h4><a href="#feature" class="title-head">Pet Sitting</a></h4>
-                <p>
-                  Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
-                  doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
-                  leo.
-                </p>
-                <a href="#" class="read">Read More</a>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 my-3">
+            <div class="features__item">
+              <i class="fa-solid fa-hands"></i>
+              <h4><a href="#feature" class="title-head">Pet Sitting</a></h4>
+              <p>
+                Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
+                doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
+                leo.
+              </p>
+              <a href="#" class="read">Read More</a>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 my-3">
-              <div class="features__item">
-                <i class="fa-solid fa-sitemap"></i>
-                <h4>
-                  <a href="#feature" class="title-head">Dog Activities</a>
-                </h4>
-                <p>
-                  Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
-                  doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
-                  leo.
-                </p>
-                <a href="#" class="read">Read More</a>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 my-3">
+            <div class="features__item">
+              <i class="fa-solid fa-sitemap"></i>
+              <h4>
+                <a href="#feature" class="title-head">Dog Activities</a>
+              </h4>
+              <p>
+                Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
+                doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
+                leo.
+              </p>
+              <a href="#" class="read">Read More</a>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 my-3">
-              <div class="features__item">
-                <i class="fa-solid fa-shower"></i>
-                <h4><a href="#feature" class="title-head">Pet Daycare</a></h4>
-                <p>
-                  Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
-                  doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
-                  leo.
-                </p>
-                <a href="#" class="read">Read More</a>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 my-3">
+            <div class="features__item">
+              <i class="fa-solid fa-shower"></i>
+              <h4><a href="#feature" class="title-head">Pet Daycare</a></h4>
+              <p>
+                Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
+                doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
+                leo.
+              </p>
+              <a href="#" class="read">Read More</a>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 my-3">
-              <div class="features__item">
-                <i class="fa-solid fa-user-doctor"></i>
-                <h4><a href="#feature" class="title-head">Pet Grooming</a></h4>
-                <p>
-                  Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
-                  doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
-                  leo.
-                </p>
-                <a href="#" class="read">Read More</a>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 my-3">
+            <div class="features__item">
+              <i class="fa-solid fa-user-doctor"></i>
+              <h4><a href="#feature" class="title-head">Pet Grooming</a></h4>
+              <p>
+                Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
+                doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
+                leo.
+              </p>
+              <a href="#" class="read">Read More</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- End features -->
+    </div>
+  </section>
+  <!-- End features -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <!-- Template JavaScript -->
+  <script src="owl/jquery-3.3.1.min.js"></script>
+  <script src="owl/theme-change.js"></script>
+  <script src="owl/owl.carousel.js"></script>
+  <!-- script for banner slider-->
+  <script>
+    $(document).ready(function () {
+      $('.owl-one').owlCarousel({
+        loop: true,
+        margin: 0,
+        nav: false,
+        responsiveClass: true,
+        autoplay: true,
+        autoplayTimeout: 5000,
+        autoplaySpeed: 1000,
+        autoplayHoverPause: false,
+        responsive: {
+          0: {
+            items: 1,
+            nav: false
+          },
+          480: {
+            items: 1,
+            nav: false
+          },
+          667: {
+            items: 1,
+            nav: true
+          },
+          1000: {
+            items: 1,
+            nav: true
+          }
+        }
+      })
+    })
+  </script>
+  <!-- //script -->
+  <!-- script for tesimonials carousel slider -->
+</body>
+
 </html>
