upload services section

--- a/index.html
+++ b/index.html
@@ -257,6 +257,40 @@
   </section>
   <!-- End features -->
 
+  <!-- Services -->
+  <section class="services py-5">
+    <div class="container py-md-5 py-3">
+      <div class="services__content row">
+        <div class="services__img col-lg-6">
+          <img src="./img/ab.jpg" class="img-fluid" />
+        </div>
+        <div class="services__text col-lg-6">
+          <div class="title">
+            <h6>WHY CHOOSE US</h6>
+            <h3>What We Offer For You</h3>
+          </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud.Lorem ipsum dolor sit amet,
+              consectetur adipisicingelit,
+            </p>
+          </div>
+          <ul>
+            <li><span class="fa-solid fa-check"></span> Certified Groomer</li>
+            <li>
+              <span class="fa-solid fa-check"></span> 10 Years of Experience
+            </li>
+            <li><span class="fa-solid fa-check"></span> Pet Lover</li>
+            <li><span class="fa-solid fa-check"></span> Customer Supports</li>
+            <li><span class="fa-solid fa-check"></span> Veterinary Help</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Services -->
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
