chinh lai thuoc tinh css

--- a/index.html
+++ b/index.html
@@ -151,11 +151,13 @@
   <!-- About -->
   <section class="project py-5" id="about">
     <div class="about__title container py-md-5 py-3 text-center">
+      <div class="title">
       <h6>ABOUT US</h6>
       <h3>
         We Love Your Pets Like They Are Our <br />
         Own
       </h3>
+    </div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
         hic odio <br />
@@ -178,7 +180,9 @@
           <div class="col-12 col-sm-6 col-lg-4 my-3">
             <div class="features__item">
               <i class="fa-solid fa-snowflake"></i>
-              <h4><a href="#feature" class="title-head">Dog Walking</a></h4>
+              <h4>
+                <a href="#feature" class="title-head">Dog Walking</a>
+              </h4>
               <p>
                 Vivamus a ligula quam. Ut blandit eu leo non. Duis sed
                 doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu
