--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@
             </li>
           </ul>
         </div>
-        <i class="gg-sun"></i>
+        <div class="mobile-position">
+          <nav class="navigation">
+            <div class="theme-switch-wrapper">
+              <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox">
+                <div class="mode-container">
+                  <i class="gg-sun"></i>
+                  <i class="gg-moon"></i>
+                </div>
+              </label>
+            </div>
+          </nav>
+        </div>
       </nav>
     </div>
   </header>
@@ -256,7 +268,145 @@
     </div>
   </section>
   <!-- End features -->
+  <!-- stats -->
+  <section class="w3l-stats py-5" id="stats">
+    <div class="gallery-inner container py-lg-0 py-3">
+      <div class="row stats-con pb-lg-3">
+        <div class="col-lg-3 col-6 stats_info counter_grid">
+          <p class="counter">730</p>
+          <h4>Happy Clients</h4>
+        </div>
+        <div class="col-lg-3 col-6 stats_info counter_grid1">
+          <p class="counter">80</p>
+          <h4>Professionals</h4>
+        </div>
+        <div class="col-lg-3 col-6 stats_info counter_grid mt-lg-0 mt-5">
+          <p class="counter">812</p>
+          <h4>Adopted Pets</h4>
+        </div>
+        <div class="col-lg-3 col-6 stats_info counter_grid2 mt-lg-0 mt-5">
+          <p class="counter">90</p>
+          <h4>Awards</h4>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //stats -->
+  <!-- pricing plans -->
+  <section class="w3l-pricing-7-main py-5" id="pricing">
+    <div class="pricing-7-sec pt-lg-4 ">
+      <div class="container pricing-grid">
+        <div class="heading text-center mx-auto">
+          <h6 class="sub-title">Our Plans</h6>
+          <h3 class="hny-title mb-5">Affordable Packages</h3>
+        </div>
+        <div class="pricing-sec-7">
+          <div class="pricing-gd-left ">
+            <div class="w3l-pricing-7">
+              <div class="w3l-pricing-7-top">
+                <h6 class="one-light">Free Package</h6>
 
+                <h4><label>$</label>0<span>/month</span></h4>
+              </div>
+              <div class="w3l-pricing-7-bottom">
+                <div class="w3l-pricing-7-bottom-bottom">
+                  <ul class="links">
+                    <li>
+                      <p class="lists">5 Dog Walk </p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">3 Vet Visit </p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">3 Pet Spa</p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">Free Supports</p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">Customer Support</p>
+                    </li>
+
+                  </ul>
+                </div>
+                <div class="buy-button">
+                  <a class="popup btn btn-style btn-primary" href="#buy">Buy Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-gd-left pric-7 active">
+            <div class="w3l-pricing-7">
+              <div class="w3l-pricing-7-top">
+                <h5>Save 10% </h5>
+                <h6>Standard Package</h6>
+
+                <h4><label>$</label>39<span>/month</span></h4>
+              </div>
+              <div class="w3l-pricing-7-bottom">
+                <div class="w3l-pricing-7-bottom-bottom">
+                  <ul class="links">
+                    <li>
+                      <p class="lists">5 Dog Walk </p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">3 Vet Visit </p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">3 Pet Spa</p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">Free Supports</p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">Customer Support</p>
+                    </li>
+                  </ul>
+                </div>
+                <div class="buy-button">
+                  <a class="popup btn btn-style btn-primary" href="#buy">Get Started</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-gd-left pric-7-2">
+            <div class="w3l-pricing-7">
+              <div class="w3l-pricing-7-top">
+                <h6 class="one-light">Pro Package</h6>
+
+                <h4><label>$</label>89<span>/month</span></h4>
+              </div>
+              <div class="w3l-pricing-7-bottom">
+                <div class="w3l-pricing-7-bottom-bottom">
+                  <ul class="links">
+                    <li>
+                      <p class="lists">5 Dog Walk </p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">3 Vet Visit </p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">3 Pet Spa</p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">Free Supports</p>
+                    </li>
+                    <li>
+                      <p class="lists line-through">Customer Support</p>
+                    </li>
+                  </ul>
+                </div>
+                <div class="buy-button">
+                  <a class="popup btn-style btn-primary" href="#buy">Buy Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //pricing plans -->
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -307,6 +457,13 @@
   </script>
   <!-- //script -->
   <!-- script for tesimonials carousel slider -->
+  <!-- stats number counter-->
+  <script src="./countup/jquery.waypoints.min.js"></script>
+  <script src="./countup/jquery.countup.js"></script>
+  <script>
+    $('.counter').countUp();
+  </script>
+  <!-- //stats number counter -->
 </body>
 
 </html>
