--- a/index.html
+++ b/index.html
@@ -294,6 +294,135 @@
   </section>
   <!-- End Services -->
 
+  <!-- Testimonials -->
+  <section id="clients">
+    <!-- /grids -->
+    <div class="cusrtomer-layout py-5">
+        <div class="container py-lg-4 py-md-3 pb-lg-0">
+            <div class="title text-center mx-auto">
+                <h6 class="sub-title text-center">Testimonials</h6>
+                <h3 class="hny-title mb-md-5 mb-4">Happy Clients & Feedbacks</h3>
+            </div>
+            <!-- /grids -->
+            <div class="testimonial-width">
+                <div id="owl-demo1" class="owl-two owl-carousel owl-theme owl-loaded owl-drag">
+                <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 1s ease 0s; width: 3210px;"><div class="owl-item active" style="width: 515px; margin-right: 20px;"><div class="item">
+                        <div class="testimonial-content">
+                            <div class="testimonial">
+                                <blockquote>
+                                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
+                                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                                        Dolores molestias adipisci dolor sit amet!.</q>
+                                </blockquote>
+                                <div class="testi-des">
+                                    <div class="test-img"><img src="./img/f1.jpg" class="img-fluid" alt="client-img">
+                                    </div>
+                                    <div class="peopl align-self">
+                                        <h3>John wilson</h3>
+                                        <p class="indentity">Example City</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div><div class="owl-item active" style="width: 515px; margin-right: 20px;"><div class="item">
+                        <div class="testimonial-content">
+                            <div class="testimonial">
+                                <blockquote>
+                                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
+                                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                                        Dolores molestias adipisci dolor sit amet!.</q>
+                                </blockquote>
+                                <div class="testi-des">
+                                    <div class="test-img"><img src="./img/f2.jpg" class="img-fluid" alt="client-img">
+                                    </div>
+                                    <div class="peopl align-self">
+                                        <h3>Julia sakura</h3>
+                                        <p class="indentity">Example City</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div><div class="owl-item" style="width: 515px; margin-right: 20px;"><div class="item">
+                        <div class="testimonial-content">
+                            <div class="testimonial">
+                                <blockquote>
+                                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
+                                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                                        Dolores molestias adipisci dolor sit amet!.</q>
+                                </blockquote>
+                                <div class="testi-des">
+                                    <div class="test-img"><img src="./img/f3.jpg" class="img-fluid" alt="client-img">
+                                    </div>
+                                    <div class="peopl align-self">
+                                        <h3>Roy Linderson</h3>
+                                        <p class="indentity">Example City</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div><div class="owl-item" style="width: 515px; margin-right: 20px;"><div class="item">
+                        <div class="testimonial-content">
+                            <div class="testimonial">
+                                <blockquote>
+                                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
+                                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                                        Dolores molestias adipisci dolor sit amet!.</q>
+                                </blockquote>
+                                <div class="testi-des">
+                                    <div class="test-img"><img src="./img/f4.jpg" class="img-fluid" alt="client-img">
+                                    </div>
+                                    <div class="peopl align-self">
+                                        <h3>Mike Thyson</h3>
+                                        <p class="indentity">Example City</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div><div class="owl-item" style="width: 515px; margin-right: 20px;"><div class="item">
+                        <div class="testimonial-content">
+                            <div class="testimonial">
+                                <blockquote>
+                                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
+                                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                                        Dolores molestias adipisci dolor sit amet!.</q>
+                                </blockquote>
+                                <div class="testi-des">
+                                    <div class="test-img"><img src="./img/f2.jpg" class="img-fluid" alt="client-img">
+                                    </div>
+                                    <div class="peopl align-self">
+                                        <h3>Laura gill</h3>
+                                        <p class="indentity">Example City</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div><div class="owl-item" style="width: 515px; margin-right: 20px;"><div class="item">
+                        <div class="testimonial-content">
+                            <div class="testimonial">
+                                <blockquote>
+                                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
+                                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                                        Dolores molestias adipisci dolor sit amet!.</q>
+                                </blockquote>
+                                <div class="testi-des">
+                                    <div class="test-img"><img src="./img/f3.jpg" class="img-fluid" alt="client-img">
+                                    </div>
+                                    <div class="peopl align-self">
+                                        <h3>Smith Johnson</h3>
+                                        <p class="indentity">Example City</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div></div></div>
+            </div>
+        </div>
+        <!-- /grids -->
+    </div>
+    <!-- //grids -->
+  </section>
+  <!-- End Testimonials -->
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -344,6 +473,32 @@
   </script>
   <!-- //script -->
   <!-- script for tesimonials carousel slider -->
+<script>
+  $(document).ready(function () {
+    $("#owl-demo1").owlCarousel({
+      loop: true,
+      margin: 20,
+      nav: false,
+      responsiveClass: true,
+      responsive: {
+        0: {
+          items: 1,
+          nav: false
+        },
+        736: {
+          items: 1,
+          nav: false
+        },
+        1000: {
+          items: 2,
+          nav: false,
+          loop: false
+        }
+      }
+    })
+  })
+</script>
+<!-- //script for tesimonials carousel slider -->
 </body>
 
 </html>
