--- a/index.html
+++ b/index.html
@@ -294,6 +294,46 @@
   </section>
   <!-- End Services -->
 
+  <!-- Video  -->
+  <section class="w3l-index5" id="about">
+    <div class="new-block py-5">
+        <div class="container py-lg-5">
+            <div class="middle-section text-center">
+                <div class="title">
+                  <h6 class="sub-title text-center"> Better pet nutrition.</h6>
+                    <h3 class="hny-title"> The finest fresh food and all your pet needs.</h3>
+                    <p class="mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet elit consec tetur adipisi elit.
+  
+                      Lorem ipsum dolor sit amet elit consec tetur adipisi elit. Iure voluptatibus explicabo
+                        officia.</p>
+                </div>
+                <div class="history-info mt-5">
+                    <div class="position-relative">
+                        <img src="./img/banner2.jpg" class="img-fluid radius-image video-popup-image" alt="video-popup">
+  
+                        <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
+                            <span class="video-play-icon">
+                                <span class="fa fa-play"></span>
+                            </span>
+                        </a>
+  
+                        <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+                        <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+                          <iframe src="https://player.vimeo.com/video/101587706" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe>
+                          </div>
+                    </div>
+                </div>
+  
+                <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+                <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+                  <iframe src="https://player.vimeo.com/video/101587706" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
+  <!-- End Video -->
+
   <!-- Testimonials -->
   <section id="clients">
     <!-- /grids -->
@@ -472,6 +512,44 @@
     })
   </script>
   <!-- //script -->
+  <!-- video popup -->
+<script src="./owl/jquery.magnific-popup.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $('.popup-with-zoom-anim').magnificPopup({
+      type: 'inline',
+
+      fixedContentPos: false,
+      fixedBgPos: true,
+
+      overflowY: 'auto',
+
+      closeBtnInside: true,
+      preloader: false,
+
+      midClick: true,
+      removalDelay: 300,
+      mainClass: 'my-mfp-zoom-in'
+    });
+
+    $('.popup-with-move-anim').magnificPopup({
+      type: 'inline',
+
+      fixedContentPos: false,
+      fixedBgPos: true,
+
+      overflowY: 'auto',
+
+      closeBtnInside: true,
+      preloader: false,
+
+      midClick: true,
+      removalDelay: 300,
+      mainClass: 'my-mfp-slide-bottom'
+    });
+  });
+</script>
+<!-- //video popup -->
   <!-- script for tesimonials carousel slider -->
 <script>
   $(document).ready(function () {
